--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
            
         </div>
 
-        <!-- <footer class="footer mt-auto py-3">
+        <footer class="footer mt-auto py-3">
         <div class="container">
-            <span>Copyright&copy</span>
+            <span>Copyright&copy Serena Brown 2019</span>
         </div>
-    </footer> -->
+    </footer>
 </body>
 
 </html>
